fix navigate menu hover jumps

--- a/css/project_nav.css
+++ b/css/project_nav.css
@@ -71,13 +71,15 @@ td.navigation-list a[href$='donate.html'], td.navigation-list a[href$='donate.ht
   background-repeat: repeat-x;
 	color: white;
 }
-
-#project-navigation td.navigation-list a:hover
-{
+#project-navigation td.navigation-list a[href] {
+  padding: 4px 6px;
+}
+#project-navigation td.navigation-list a[href]:hover {
 	background: rgb(254,204,177);
 	background: linear-gradient(to bottom, rgba(254,204,177,1) 0%, rgba(241,116,50,1) 50%, rgba(234,85,7,1) 51%, rgba(251,149,94,1) 100%);
 	color: white !important;
 	margin: 2px 3px 0px 2px !important;
+  padding: 4px 5px 4px 5px;
 	text-decoration: none;
 }
 
